2016-01-04  Barton E. Schaefer  <schaefer@zsh.org>

	* Jun T. (+ revise test): 37501: Src/builtin.c, Test/B03print.ztst:
	correct byte counts when simulating memstream via temp file

2016-01-02  Barton E. Schaefer  <schaefer@zsh.org>

	* 37497: Src/builtin.c: handle NUL bytes in "printf -v".

	* 37493: Doc/Zsh/builtins.yo, Src/builtin.c, Src/hashtable.h,
	Test/B02typeset.ztst: readonly + POSIX_BUILTINS == typeset -gr

2016-01-01  Barton E. Schaefer  <schaefer@zsh.org>

	* 37483: Src/glob.c: save and possibly restore cshnullglob failure
	state around each evaluation of an (e:...:) glob qualifier.

	* 37473: Src/exec.c: check for cshnullglob in command position.

2015-12-31  Barton E. Schaefer  <schaefer@zsh.org>

	* 37469: Src/parse.c: do NOT allow semicolons in place of line breaks
	in conditionals

	* unposted:  Src/builtin.c: enable WARN_CREATE_GLOBAL for print -v

	* 37468: Src/parse.c: allow line breaks in more places in [[ ... ]]

	* 37467: Doc/Zsh/builtins.yo, Src/builtin.c, Test/B03print.ztst:
	add "print -v var" / "printf -v var"

2015-12-31  Oliver Kiddle  <opk@zsh.org>

	* 37453 (with Bart, started by Baptiste Daroussin, 37315)
	Test/C02cond.ztst: try to improve detection of noatime filesystem

	* users/21114: Completion/Unix/Command/_dig: new completion

2015-12-30  Barton E. Schaefer  <schaefer@zsh.org>

	* 37460: Test/X03zlebindkey.ztst: make sure the default keymap is
	emacs before using that keymap to test bindings

2015-12-31  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: NEWS: Document how to disable paste highlighting.

	* 37456: Src/Zle/zle_refresh.c: Have zle_highlight=(none)
	disable paste highlighting

2015-12-30  Frank Terbeck  <ft@bewatermyfriend.org>

	* 37451: Functions/VCS_Info/vcs_info: vcs_info: Declare "msgs" in
	early context

2015-12-27  Axel Beckert  <abe@deuxchevaux.org>

	* 37438: Completion/Debian/Command/_aptitude: Also parse --help/-h
	output of aptitude 0.7.5 and later.

2015-12-26  Axel Beckert  <abe@deuxchevaux.org>
