@@ -1,5 +1,8 @@
 2016-01-04  Barton E. Schaefer  <schaefer@zsh.org>
 
+	* 37503: Src/builtin.c: detect incompatible "print" options, fix
+	metafication and possible memory leak, miscellaneous cosmetics
+
 	* Jun T. (+ revise test): 37501: Src/builtin.c, Test/B03print.ztst:
 	correct byte counts when simulating memstream via temp file
 
